sass/app.sass
// Mixins
=kwic-before()
  max-width: 300px
  min-width: 200px
  text-align: right
  text-overflow: ellipsis
  padding-right: 2px

=kwic-after()
  max-width: 300px
  min-width: 200px
  text-align: left
  text-overflow: ellipsis
  padding-left: 2px

=kwic-key()
  min-width: 6em
  max-width: 12em
  text-align: center
  padding-left: 2px
  padding-right: 2px

=hover-reveal()
  text-overflow: clip
  white-space: normal
  word-break: break-all

=flex-column()
  max-width: 200px
  padding-left: 2px
  padding-right: 2px

// Styles
table.kwic
  thead tr
    th:nth-child(2)
      +kwic-before()
    th:nth-child(3)
      +kwic-key()
    td:nth-child(4)
      +kwic-after()
    td:nth-child(5)
      +flex-column()
    td:nth-child(6)
      +flex-column()
    td:nth-child(7)
      +flex-column()

  tbody tr
    td:nth-child(2)
      +kwic-before()
      white-space: nowrap
      overflow: hidden
      direction: rtl
      unicode-bidi: plaintext
    td:nth-child(2):hover
      +kwic-before()
      +hover-reveal()
      text-align: left

    td:nth-child(3)
      +kwic-key()
      background: lighten(grey, 45%)

    td:nth-child(4)
      +kwic-after()
      white-space: nowrap
      overflow: hidden
    td:nth-child(4):hover
      +kwic-after()
      +hover-reveal()

    td:nth-child(5)
      +flex-column()
      white-space: nowrap
      overflow: hidden
    td:nth-child(5):hover
      +flex-column()
      +hover-reveal()

    td:nth-child(6)
      +flex-column()
      white-space: nowrap
      overflow: hidden
    td:nth-child(6):hover
      +flex-column()
      +hover-reveal()

    td:nth-child(7)
      +flex-column()
      white-space: nowrap
      overflow: hidden
    td:nth-child(7):hover
      +flex-column()
      +hover-reveal()

.is-centered
  justify-content: center

.is-padded
  padding-top: 24px
  padding-bottom: 24px

a.nav-item.is-danger.is-active
  color: hsl(348, 100%, 61%)
  border-bottom: 3px solid hsl(348, 100%, 61%)

.flex-grow
  flex-grow: 1

